copilot-api/deploy/chatgpt-next-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chatgpt-next-web
  name: chatgpt-next-web
  namespace: copilot   #一定要写名称空间
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: chatgpt-next-web
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chatgpt-next-web
    spec:
      containers:
        - image: yidadaa/chatgpt-next-web:lastest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatgpt-next-web
  name: chatgpt-next-web
  namespace: copilot
spec:
  selector:
    app: chatgpt-next-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
