copilot-api/deploy/copilot-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: copilot-api
  name: copilot-api
  namespace: copilot   #一定要写名称空间
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: copilot-api
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: copilot-api
    spec:
      containers:
        - image: kohlarnhin/copilot-api:latest
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: copilot-api
  name: copilot-api
  namespace: copilot
spec:
  selector:
    app: copilot-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
